prevents overlap of schedule-tile cards on coffee-schedule page

--- a/app/assets/stylesheets/api/coffee_schedule.scss
+++ b/app/assets/stylesheets/api/coffee_schedule.scss
@@ -154,6 +154,7 @@
 .star li{
   display: flex;
   flex-direction: row;
+  // justify-content: space-between;
   box-sizing: inherit;
   position: relative;
   margin: 20px;
@@ -163,8 +164,9 @@
 .star .schedule-tile{
   display: flex;
   flex-direction: column;
-  // margin: 5px;
   width: 23%;
+  min-width: 180px;
+  // overflow: scroll;
   // justify-content: space-between;
   // box-sizing: inherit; // last
 }
